cluster-laptop-gitops/components/argocd-ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: argocd-server
  namespace: argocd
  annotations:
    kubernetes.io/ingress.class: "traefik"
    traefik.frontend.rule.type: PathPrefixStrip  
spec:
  rules:
    - http:
        paths:
          - path: /argocd
            pathType: Exact
            backend:
              service:
                name: argocd-server
                port:
                  number: 80
